Fix styles: Align load more button in center. Change body width

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -23,7 +23,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   margin: 0;
 }
